# ffmpeg_rtsp

./: CMakeLists.txt  README.md
include/: ffplay_widget.h
src/: ffmpeg_process.cpp  ffmpeg_process.h  ffmpeg_rtsp.cpp  ffmpeg_rtsp.h  ffplay_process.cpp  ffplay_process.h  ffplay_widget.cpp  ffplay_widget.h  ffplayer.h  haha.h  main.cpp  main_window.cpp  main_window.h  video_record.h  video_reocrd.cpp
